<?xml version="1.0"?>
<package>
  <name>local_planner_msgs</name>
  <version>0.0.0</version>
  <description>The local_planner_msgs package</description>

  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
