<?xml version="1.0"?>
<package>
  <name>plp_extra_plugins</name>
  <version>0.0.0</version>
  <description>The plp_extra_cost_functions package</description>

  <maintainer email="dlu@todo.todo">dlu</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>plugin_local_planner</build_depend>
  <build_depend>plp_basic_cost_functions</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>plugin_local_planner</run_depend>
  <run_depend>plp_basic_cost_functions</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
      <plugin_local_planner plugin="${prefix}/critics.xml"/>
  </export>
</package>
